--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 version: '1.0.0',
                 forwardErrorsToLogs: true,
                 sessionSampleRate: 100,
-                trackingConsent: 'not-granted',
+                trackingConsent: 'granted',
             })
         })
     </script>
