forwardConsoleLogs now enabled

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 version: '1.0.0',
                 forwardErrorsToLogs: true,
                 sessionSampleRate: 100,
-                trackingConsent: 'granted',
+                trackingConsent: 'not-granted',
+                forwardConsoleLogs: ["all"],
             })
         })
     </script>
