--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             consentButton.addEventListener("click", function () {
                 // Simulate giving consent
                 console.log("Consent given for tracking logs.");
-                window.DD_LOGS.setTrackingConsent('granted');
+                window.DD_LOGS.onReady(function () {
+                    window.DD_LOGS.setTrackingConsent('granted');
+                });
 
                 // Here you would typically send the consent to your server or tracking service
                 // For this example, we just log it to the console
@@ -44,7 +46,10 @@
             generateLogsButton.addEventListener("click", function () {
                 // Simulate generating logs
                 console.log('DD off - initial', Date.now())
-                window.DD_LOGS.setTrackingConsent('granted');
+                window.DD_LOGS.onReady(function () {
+                    window.DD_LOGS.setTrackingConsent('granted');
+                });
+                //window.DD_LOGS.setTrackingConsent('granted');
                 console.log('DD on - post grant', Date.now())
                 window.DD_LOGS.setTrackingConsent('not-granted');
                 console.log('DD off - post deny new normal', Date.now())
