Changed call to toggle consent status

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                 });
                 //window.DD_LOGS.setTrackingConsent('granted');
                 console.log('DD on - post grant', Date.now())
-                window.DD_LOGS.setTrackingConsent('not-granted');
+                window.DD_LOGS.onReady(function () {
+                    window.DD_LOGS.setTrackingConsent('not-granted');
+                });
+                //window.DD_LOGS.setTrackingConsent('not-granted');
                 console.log('DD off - post deny new normal', Date.now())
                 setTimeout(() => {
                     console.log('DD off - post deny new with timeout', Date.now())
