Fixed forwardConsoleLogs config

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 forwardErrorsToLogs: true,
                 sessionSampleRate: 100,
                 trackingConsent: 'not-granted',
-                forwardConsoleLogs: ["all"],
+                forwardConsoleLogs: "all",
             })
         })
     </script>
