Moved logs inside onReady

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 console.log('DD on - post grant', Date.now())
                 window.DD_LOGS.onReady(function () {
                     window.DD_LOGS.setTrackingConsent('not-granted');
-                }).then(() => {
                     console.log('DD off - post grant new normal', Date.now());
+
                     setTimeout(() => {
-                        console.log('DD off - post deny new with timeout', Date.now())
-                    }, 5000)
+                        console.log('DD off - post deny new with timeout', Date.now());
+                    }, 5000);
                 });
                 //window.DD_LOGS.setTrackingConsent('not-granted');
             });
