Added revoke consent button

--- a/index.html
+++ b/index.html
@@ -27,10 +27,25 @@
     </script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
+            const consentButton = document.getElementById("consentRevokedButton");
+            consentButton.addEventListener("click", function () {
+                // Simulate giving consent
+                console.log("Consent revoked for tracking logs.");
+                window.DD_LOGS.onReady(function () {
+                    window.DD_LOGS.setTrackingConsent('not-granted');
+                });
+
+                // Here you would typically send the consent to your server or tracking service
+                // For this example, we just log it to the console
+            });
+        });
+    </script>
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
             const consentButton = document.getElementById("consentButton");
             consentButton.addEventListener("click", function () {
                 // Simulate giving consent
-                console.log("Consent given for tracking logs.");
+                console.log("Consent revoked for tracking logs.");
                 window.DD_LOGS.onReady(function () {
                     window.DD_LOGS.setTrackingConsent('granted');
                 });
@@ -77,6 +92,7 @@
 <body>
     <div>
         <button id="consentButton">Give Consent</button>
+        <button id="consentRevokedButton">Revoke Consent</button>
         <button id="generateLogsButton">Generate Logs</button>
         <button id="generateLogsAfterNoConsent">Generate Logs with Disabled Consent</button>
     </div>
